k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "false"
    appgw.ingress.kubernetes.io/use-private-ip: "false"
spec:
  rules:
  - http:
      paths:
      - path: /patients/*
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
      - path: /appointments/*
        pathType: Prefix
        backend:
          service:
            name: application-service
            port:
              number: 80
      - path: /orders/*
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 80
